[MacViews] Left-align control labels as on other platforms.

The Harmony spec calls for left-aligned control labels. Labels are
correctly aligned on Windows but not on the Mac because of special-case
code. This cl removes that special-case code to bring the Mac in line
with all other platforms.

R=sky@chromium.org
BUG=660578

Review-Url: https://codereview.chromium.org/2465543002
Cr-Commit-Position: refs/heads/master@{#428552}

Former-commit-id: 106d55c0f1e8b3a074565392d13b9f528deba61a